testsuite/tests/ghc-regress/typecheck/should_fail/tcfail089.stderr
tcfail089.hs:10: Parse error in pattern
